@@ -1,3 +1,12 @@
+2008-11-03  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Kevin Decker.
+        
+        - fix release build (and unitialized variable for CG drawing model!)
+
+        * Plugins/WebBaseNetscapePluginView.mm:
+        (-[WebBaseNetscapePluginView sendEvent:isDrawRect:]): initialize portState in all code paths
+
 2008-11-03  Kevin Decker  <kdecker@apple.com>
 
         Reviewed by Anders Carlsson.
